--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android_Clean_Architecture</string>
+    <string name="web_client_id">436288578840-0nj1arqfbpusfv74f9cbelp1sib8abm9.apps.googleusercontent.com</string>
 </resources>
